<resources>
    <string name="app_name">Кампус Live</string>
    <string name="host">http://apiburg.beget.tech</string>
    <string name="onboard_title_one">Сообщество студентов для твоего учебного заведения</string>
    <string name="onboard_message_one">Анонимно общайся с другими студентами из твоего учебного заведения</string>
    <string name="start_title_two">Выбери свое учебное\nзаведений из тысячи\nдругих</string>
    <string name="start_message_two">Доступно для болле двух тысяч институтов и колледжей России</string>
    <string name="start_title_three">Получай PUSH\nуведомления о новых\nпубликациях</string>
    <string name="start_message_three">Моментально узнавай о последних событиях в учебном заведение благодаря PUSH уведомлениям</string>
    <string name="start_title_four">Вступай в анонимные дискуссии с другими студентами</string>
    <string name="start_message_four">Делись анонимно своим мнением с другими студентами учебного заведения</string>
    <string name="start">Выбрать учебное заведение</string>

    <string name="feed">Новости</string>
    <string name="notification">Уведомления</string>
    <string name="menu">Меню</string>

    <string name="error_network">Не удалось установить подключение к серверу\nпроверьте подключение к интернету</string>
    <string name="close">Закрыть</string>
    <string name="location_hint">Название или аббревиатура</string>
    <string name="gallery">Фотографии</string>
    <string name="permission_data">Разрешите доступ к памяти\nтелефона, для отображение ваших\nфотографий и загрузки\nих на сервер</string>
    <string name="request_permission">Запросить разрешение</string>
    <string name="new_publication">Новая запись</string>
    <string name="send">Отправить</string>

    <string name="none_comments">Нет комментариев</string>
    <string name="s_comment_one">Комментариев</string>
    <string name="s_comments_two">Комментарий</string>
    <string name="s_comments_3">Комментария</string>
    <string name="s_comments_4">Комментария</string>
    <string name="s_comments_5">Комментария</string>

    <string name="complaint">Пожаловаться</string>
    <string name="complaint_description">В случае если пользователь нарушил правила, он будет заблокирован</string>
    <string name="comments_description">Вступите в дискуссию с другими пользователями сообщества</string>
    <string name="reply">Ответить</string>
    <string name="reply_description">Ваш комментарий будет расположен под комментарием на который вы ответили</string>
    <string name="error_authorization">Ключ доступа пользователя устарел, переустановите приложение для того, чтобы использовать его дальше</string>

    <string name="talk">Расскажи о наше приложение своим одногруппникам и сделай соощество более интересным</string>
    <string name="complaint_response">Жалоба отправлена</string>
    <string name="comment_hidden">Комментарий скрыт по решению сообщества</string>
    <string name="comment_create_hint">Ваш комментарий</string>
    <string name="discussion_none">Комментарии остутсвуют\nоставьте свой комментарий к данной публикации</string>
    <string name="not_publication">Публикации для данного учебного заведения отсутствуют, будте первым, напишите о чем нибудь интересном на странице данного учебного заведения</string>
    <string name="ribbon_none">Будь первым, кто опубликуе запись\nна странице данного учебного\nзаведения</string>

    <string name="falovers">falovers</string>
    <string name="karma">karma</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="error_network_connection">Не удалось установить\nподключение к серверу\nпроверьте подключени\nк сети интернет</string>
    <string name="error_unknown">Произошла неизвестная ошибка\nповторите попытку еще раз\nили обратитесь к администратору</string>
    <string name="error_404">Ещё никто не оставил\nсообщения на странице\nданного учебного заведения</string>
    <string name="error_401">Токен пользователя устарел, вам необходимо переустановить приложение</string>
    <string name="error_403">Вы были заблокированны администратором за нарушения правил сообщества</string>
    <string name="error_wall_405">У вас слишком плохая карма, для публикации новых записей</string>
    <string name="error_wall_407">Новым пользователям не доступна публикация новых записей</string>
    <string name="error_408">Нельзя слишком часто публиковать записи на странице учебного заведения</string>
    <string name="error_500">Произошла неизвестная ошибка, повторите попытку ещё раз</string>

    <string name="channel_name">Важные уведомления</string>
    <string name="channel_description">Важные уведомления, чтобы быть в курсе последних событий в учебном заведение</string>

    <string name="notification_title">Новая публикация!</string>
    <string name="notification_body">На странице вашего учебного заведения была опубликована новая запись.</string>

</resources>