<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:fontFamily="@font/montserrat"
            app:fontFamily="@font/montserrat"
            android:textSize="15sp"
            android:textColor="#53646e"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_publication"/>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:clipToPadding="false"
        android:layout_marginStart="-4dp" />

    <LinearLayout
        android:id="@+id/permissionsRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/permissionsIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gallery"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/permissionsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#53646e"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="13sp"
            android:layout_marginTop="26dp"
            android:text="@string/permission_data"
            android:fontFamily="@font/montserrat"
            app:fontFamily="@font/montserrat"/>

        <Button
            android:id="@+id/permissionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_permission"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:backgroundTint="#f5f5f5"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/roboto_regular"
            app:fontFamily="@font/roboto_regular" />

    </LinearLayout>

</LinearLayout>