<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/discussionIdRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/commentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="16dp"
            android:textSize="12sp"
            android:textColor="#53646e"
            android:background="@drawable/bg_publication"
            android:text="id524"
            android:fontFamily="@font/montserrat"
            app:fontFamily="@font/montserrat"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#eeeeee"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/complaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        tools:ignore="UnusedAttribute">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sheetDiscussionMessage_complaintIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/complaint"
                android:contentDescription="@null" />


            <TextView
                android:id="@+id/mainBottomSheet_complaintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaint"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/sheetDiscussionMessage_complaintIcon"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                app:fontFamily="@font/roboto_regular"/>

            <TextView
                android:id="@+id/mainBottomSheet_complainDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complaint_description"
                android:textSize="12sp"
                android:textColor="#53646e"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/sheetDiscussionMessage_complaintIcon"
                android:layout_below="@+id/mainBottomSheet_complaintTitle"
                android:fontFamily="@font/montserrat"
                app:fontFamily="@font/montserrat"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/mainBottomSheet_commentsIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="17dp"
            android:src="@drawable/comments_icon"
            android:contentDescription="@null"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reply"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/mainBottomSheet_commentsIcon"
            android:gravity="center"
            tools:ignore="RtlHardcoded"
            android:fontFamily="@font/roboto_regular"
            app:fontFamily="@font/roboto_regular"/>

        <TextView
            android:id="@+id/commentsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reply_description"
            android:textSize="12sp"
            android:textColor="#53646e"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:layout_toEndOf="@+id/mainBottomSheet_commentsIcon"
            android:layout_below="@+id/comments"
            tools:ignore="RtlSymmetry"
            android:fontFamily="@font/montserrat"
            app:fontFamily="@font/montserrat"/>

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="#eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/sheetDiscussionMessage_itemDown"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/down"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_keyboard_arrow_down_black_24"
                android:contentDescription="@null"
                android:layout_centerInParent="true"
                android:background="?selectableItemBackgroundBorderless"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sheetDiscussionMessage_itemRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:padding="16dp"
            android:background="?selectableItemBackgroundBorderless">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="+178"
                    android:textColor="#999999"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sheetDiscussionMessage_itemUp"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/up"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:src="@drawable/baseline_keyboard_arrow_up_black_24"
                android:contentDescription="@null"
                android:background="?selectableItemBackgroundBorderless"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>